<resources>
    <string name="app_name">TicketSchedul</string>
    <string name="title">title</string>
    <string name="date">yyyy/mm/dd ~ yyyy/mm/dd</string>
    <string name="memo">memo</string>
    <string name="add">add</string>
    <string name="no_data">データがありません</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">cancel</string>
    <string name="ok">OK</string>
    <string name="dialog">dialog</string>
    <string name="date_start">date start</string>
    <string name="date_end">date end</string>
</resources>
