<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

<EditText
    android:id="@+id/input_title"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:maxLength="20"
    android:autofillHints="@string/title"
    android:inputType="text" />

 <EditText
    android:id="@+id/input_memo"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/input_title"
    app:layout_constraintStart_toStartOf="parent"
    android:maxLength="200"
    android:autofillHints="@string/memo"
    android:inputType="text" />

    <ImageView
        android:id="@+id/main_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add"
        android:src="@drawable/ic_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/input_memo" />

    <ListView
        android:id="@+id/main_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        app:layout_constraintTop_toBottomOf="@id/main_add" />

    <TextView
        android:id="@+id/no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/main_add" />
</androidx.constraintlayout.widget.ConstraintLayout>
